service.yaml
apiVersion: v1
kind: Service
metadata:
 name: python-service
spec:
 type: ClusterIP
 ports:
 - name: http
   port: 80
   protocol: TCP 
   targetPort: 80

 selector:
  app: python_app
